  - Disabled verdata.mul support as this is no longer included in the latest
    releases of Ultima Online. Note: Commented out the source code only.
  - Implemented an onSelectAbility event for the weapon special moves.
  - Corrected the NINJITSU and BUSHIDO skill ids.
  - Small cleanup to wolfpack.xml: Database options follow the same option
    names are are given in account options. 
 * Definition Changes:
  - Added the mage AI to most creatures.
  - Adjusted carving sheep.
  - Fixed leatherworkers and tanners not buying leather and hides.
  - Male NPCs now have a 75% chance of getting a beard when created.
  - Made shrink potions craftable.
  - Changed the color of shrink potions.
  - Added Tokuno includes for regions and spawnregions.
  - Removed the "Pink Spawn" from decoration.
  - Fixed skeletal steeds stats and skills.
  - Added stackable burned food that is used when cooking fails.
  - Added ranged weapons + ammo to orc scout, ratmen archer, meer captain and juka lord.
  - Added colored samurai armor.
  - Reorganized base armor categories.
  - New folder for defines: definitions/defines/
  - Applied the index.xml branches to colored armor.
  - Added lightsources to fire elementals, wisps and horde minions.
  - Added bones to bone_magi and body parts to horde minions, zombies and others.
  - Added colored weapons. Note: Only the metallic weapons.
  - Sorted out the samurai weapons by type and fixed properties.
  - Ranged weapons set to 10 instead of 12.
  - Price fixes for arrows/bolts.
  - Fixed potion kegs.
  - Gave guards colored hair.
  - NPC skill defines are now: <skill id="skilldef">value</skill>
  - Gold now has weight.
  - Corrected the bushido and ninjitsu skill ids.
  - All mounts now have the event npc.mount
 * Python Script Changes:
  - Fixed bug #0000369. (Equip possible although item.movable = 3)
  - Fixed bug #0000361. (Pets don't follow trough gate)
  - Added xoffset, yoffset and zoffset to socket.attachmultitarget. (housing.deed)