@@ -1,0 +1,74 @@
+<definitions>
+	<contextmenu id="ankh">
+		<scripts>ankh</scripts>
+		<option tag="1" msgid="6196" checkvisible="true" /> <!-- Lock Karma -->
+		<option tag="2" msgid="6197" checkvisible="true" /> <!-- Unlock Karma -->
+		<option tag="3" msgid="6195" checkenabled="true" /> <!-- Resurrect -->
+		<option tag="4" msgid="6198" /> <!-- Tithe Gold -->
+	</contextmenu>
+
+	<!-- Ankhs -->
+	<item id="2">
+		<id>0x02</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh (W/E) (1/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+
+	<item id="3">
+		<id>0x03</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh (W/E) (2/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+
+	<item id="4">
+		<id>0x04</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh (N/S) (1/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+
+	<item id="5">
+		<id>0x05</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh (N/S) (2/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+
+	<item id="1d97">
+		<id>0x1d97</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh of Sacrifice (W/E) (1/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+
+	<item id="1d98">
+		<id>0x1d98</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh of Sacrifice (W/E) (2/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+
+	<item id="1e5c">
+		<id>0x1e5c</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh of Sacrifice (N/S) (1/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+
+	<item id="1e5d">
+		<id>0x1e5d</id>
+		<nodecay />
+		<category>Decoration\Ankhs\Ankh of Sacrifice (N/S) (2/2)</category>
+		<basescript>ankh</basescript>
+		<bindmenu>ankh</bindmenu>
+	</item>
+</definitions>
