@@ -20,6 +20,7 @@
 	<script>housing.sign</script>
 	<script>housing.security</script>
 
+	<script>ankh</script>
 	<script>archery_butte</script>
 	<script>bandages</script>
 	<script>blades</script>
